# kenaf

./: .gitignore  DESIGN  LICENSE  README.md  TODO  grammar.lemon  kenaf.lemon  kenaf.rc  kenaf.yl  lemon.py  lemon.sh  lexer.cpp  lexer.h  main.cpp  meson.build  parser.cpp  parser.h  resolve_names.cpp  resolve_names.h  source.cpp  source.h  syntax.cpp  syntax.h
common/: code.cpp  code.h  imath.h  k_math.h  kimath.h
doc/: BytecodeReference.md  LanguageReference.md  Rationale.md  ReferenceManual.md  grammar.md  syntax.md
include/kenaf/: code.h  compile.h  compiler.h  defines.h  errors.h  exception.h  handles.h  kenaf.h  runtime.h
lemon/: lemon.c  lemon.py  lempar.c  meson.build
parser/: OPCODES  alloc_ir.cpp  alloc_ir.h  alloc_k_ir.cpp  alloc_k_ir.h  ast.cpp  ast.h  ast_resolve.cpp  ast_resolve.h  build_icode.cpp  build_icode.h  build_ir.cpp  build_ir.h  fold.cpp  fold.h  fold_ir.cpp  fold_ir.h  foldk_ir.cpp  foldk_ir.h  grammar.lemon  icode.cpp  icode.h  ir.cpp  ir.h  ir_alloc.cpp  ir_alloc.h  ir_build.cpp  ir_build.h  ir_emit.cpp  ir_emit.h  ir_fold.cpp  ir_fold.h  ir_foldk.cpp  ir_live.cpp  ir_live.h  ir_regmap.cpp  ir_regmap.h  lexer.cpp  live_ir.cpp  live_ir.h  (+8 more)
runtime/: gc.h  heap.cpp  heap.h  types.h
source/common/: code.cpp  code.h  escape_string.cpp  escape_string.h  imath.cpp  imath.h
source/compile/: ast.cpp  ast.h  code_unit.cpp  compile.cpp  grammar.lemon  index_vector.h  ir.cpp  ir_alloc.cpp  ir_build.cpp  ir_emit.cpp  ir_emit.h  ir_fold.cpp  ir_fold.h  ir_foldk.cpp  ir_live.cpp  lexer.cpp  parser.cpp  parser.h  source.h
source/compiler/: ast.cpp  ast.h  ast_resolve.cpp  ast_resolve.h  code_unit.cpp  code_unit.h  compile.cpp  compiler.cpp  grammar.lemon  index_vector.h  ir.cpp  ir.h  ir_alloc.cpp  ir_alloc.h  ir_build.cpp  ir_build.h  ir_emit.cpp  ir_emit.h  ir_fold.cpp  ir_fold.h  ir_foldk.cpp  ir_foldk.h  ir_live.cpp  ir_live.h  ir_regmap.h  lexer.cpp  lexer.h  parser.cpp  parser.h  source.cpp  source.h  table-square-brackets.diff
source/runtime/: atomic_load_store.h  call_stack.cpp  call_stack.h  collector.cpp  collector.h  errors.cpp  exception.cpp  execute.cpp  execute.h  gc.h  gcatomic.h  hashkeys.h  heap.cpp  heap.h  objects.h  runtime.cpp  runtime.h  tick.cpp  tick.h  types.h  value.h  vm_context.h  vmachine.cpp  vmachine.h
source/runtime/corlib/: cormath.cpp  cormath.h  corobjects.cpp  corobjects.h  corprint.cpp  corprint.h  prototypes.cpp  prototypes.h
source/runtime/datatypes/: atomic_load_store.h  hash_table.cpp  hash_table.h  segment_list.cpp  segment_list.h
source/runtime/objects/: array_object.cpp  array_object.h  cothread_object.cpp  cothread_object.h  function_object.cpp  function_object.h  lookup_object.cpp  lookup_object.h  object_model.cpp  object_model.h  string_object.cpp  string_object.h  table_object.cpp  table_object.h  u64val_object.cpp  u64val_object.h
source/runtime/vm/: call_stack.cpp  call_stack.h  execute.cpp  gc_mark_sweep.cpp  gc_mark_sweep.h  heap.cpp  heap.h  vm_call_stack.cpp  vm_call_stack.h  vm_context.cpp  vm_context.h  vm_execute.cpp  vm_execute.h  vm_execute.x64.asm  vm_execute_x64.asm
test/: ambiguous.kf  assign-list.kf  binary-trees.kf  constant_fold.kf  fannkuch-phigraph-fold.dot  fannkuch-phigraph.dot  fannkuch-redux.kf  fib.kf  hello.kf  n-body.kf  object.kf  pin-locals.kf  prime.kf  spectral-norm.kf  sudoku.kf  test.kf  tokens.kf  unreachable.kf
test/cases/: assign.kf  binary-trees.kf  capture-self.kf  constant-fold.kf  extend.kf  fannkuch-redux.kf  fib.kf  generator.kf  paren.kf  pin-upvals.kf  prime.kf  redef-upval.kf  spectral-norm.kf  table.kf  test.kf  unpack.kf  upstack.kf  vararg.kf
test/parser/: ambiguous.kf  capture-varargs.kf  sudoku.kf
tests/: assign_list.kf  binary-trees.kf  fannkuch-redux.kf  loops.kf  n-body.kf  spectral-norm.kf  test.kf  tokens.kf  upstack.kf  upstack2.kf
vscode/kenaf/: CHANGELOG.md  README.md  language-configuration.json  package.json
vscode/kenaf/syntaxes/: kenaf-markdown-injection.tmLanguage.json  kenaf-markdown-injection.tmLanguage.yaml  kenaf.YAML-tmLanguage  kenaf.tmLanguage.json  kenaf.tmLanguage.yaml
